[gd_scene load_steps=60 format=3 uid="uid://d2l1fpj8yehom"]

[ext_resource type="Script" path="res://src/entities/player/player.gd" id="1_fgl7g"]
[ext_resource type="PackedScene" uid="uid://cnm077r8cak41" path="res://src/common/components/hurtbox/hurtbox_component.tscn" id="2_e0d2b"]
[ext_resource type="PackedScene" uid="uid://438y4wpihhn1" path="res://src/entities/throw_arrow/throw_arrow_pivot.tscn" id="2_pd4ny"]
[ext_resource type="PackedScene" uid="uid://cvsgunn02v50s" path="res://src/common/components/hitbox/hitbox_component.tscn" id="2_s3s30"]
[ext_resource type="PackedScene" uid="uid://c8wqsow14x6ea" path="res://src/common/components/effects_applier/effects_applier_component.tscn" id="2_yjmi5"]
[ext_resource type="Script" path="res://src/common/state_machine/state_machine.gd" id="3_ffp80"]
[ext_resource type="Script" path="res://src/entities/player/components/player_hitbox_component.gd" id="3_id8yp"]
[ext_resource type="Texture2D" uid="uid://crbwx0hf8x731" path="res://assets/player/player_sheet.png" id="3_ppmj7"]
[ext_resource type="Script" path="res://src/entities/player/states/move.gd" id="5_ob3jm"]
[ext_resource type="Script" path="res://src/entities/player/states/idle.gd" id="6_kxhls"]
[ext_resource type="Script" path="res://src/entities/player/states/run.gd" id="7_xjuja"]
[ext_resource type="Script" path="res://src/entities/player/states/carry.gd" id="8_be3oy"]
[ext_resource type="Script" path="res://src/entities/player/states/air.gd" id="8_j1lab"]
[ext_resource type="Script" path="res://src/entities/player/states/pickup.gd" id="8_pln1i"]
[ext_resource type="Script" path="res://src/entities/player/states/carry_idle.gd" id="10_8rxfi"]
[ext_resource type="Script" path="res://src/entities/player/states/carry_walk.gd" id="11_b3060"]
[ext_resource type="Script" path="res://src/entities/player/states/kick.gd" id="13_puh06"]
[ext_resource type="Script" path="res://src/entities/player/states/climb.gd" id="14_ab6lr"]
[ext_resource type="Script" path="res://src/entities/player/states/whistle.gd" id="19_ghrr3"]
[ext_resource type="AudioStream" uid="uid://sve0ldjydr7c" path="res://assets/sfx/player/player_ladder_step.wav" id="20_387y7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6kf7"]
size = Vector2(8, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5oim"]
size = Vector2(10, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6qj4"]
atlas = ExtResource("3_ppmj7")
region = Rect2(0, 54, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4b8t"]
atlas = ExtResource("3_ppmj7")
region = Rect2(18, 54, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sdae"]
atlas = ExtResource("3_ppmj7")
region = Rect2(0, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo25r"]
atlas = ExtResource("3_ppmj7")
region = Rect2(18, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_0b5nc"]
atlas = ExtResource("3_ppmj7")
region = Rect2(36, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cwnr"]
atlas = ExtResource("3_ppmj7")
region = Rect2(54, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa4t2"]
atlas = ExtResource("3_ppmj7")
region = Rect2(72, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjons"]
atlas = ExtResource("3_ppmj7")
region = Rect2(90, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2358"]
atlas = ExtResource("3_ppmj7")
region = Rect2(108, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_bne38"]
atlas = ExtResource("3_ppmj7")
region = Rect2(126, 72, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u8oi"]
atlas = ExtResource("3_ppmj7")
region = Rect2(0, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtpi0"]
atlas = ExtResource("3_ppmj7")
region = Rect2(18, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nn7i"]
atlas = ExtResource("3_ppmj7")
region = Rect2(36, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_gehyx"]
atlas = ExtResource("3_ppmj7")
region = Rect2(54, 0, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_aeog2"]
atlas = ExtResource("3_ppmj7")
region = Rect2(18, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok10a"]
atlas = ExtResource("3_ppmj7")
region = Rect2(0, 18, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_btrci"]
atlas = ExtResource("3_ppmj7")
region = Rect2(36, 54, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_jev2q"]
atlas = ExtResource("3_ppmj7")
region = Rect2(0, 90, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_aobfx"]
atlas = ExtResource("3_ppmj7")
region = Rect2(18, 90, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf2mj"]
atlas = ExtResource("3_ppmj7")
region = Rect2(36, 90, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wiak"]
atlas = ExtResource("3_ppmj7")
region = Rect2(72, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_jouhl"]
atlas = ExtResource("3_ppmj7")
region = Rect2(90, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_n333g"]
atlas = ExtResource("3_ppmj7")
region = Rect2(108, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibf2u"]
atlas = ExtResource("3_ppmj7")
region = Rect2(126, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2b6v"]
atlas = ExtResource("3_ppmj7")
region = Rect2(0, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_esxfg"]
atlas = ExtResource("3_ppmj7")
region = Rect2(18, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5s1l"]
atlas = ExtResource("3_ppmj7")
region = Rect2(36, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3vns"]
atlas = ExtResource("3_ppmj7")
region = Rect2(54, 36, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc04r"]
atlas = ExtResource("3_ppmj7")
region = Rect2(0, 108, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_qnlu6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6qj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4b8t")
}],
"loop": true,
"name": &"carry_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sdae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo25r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0b5nc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cwnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa4t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjons")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2358")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bne38")
}],
"loop": true,
"name": &"carry_walk",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u8oi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtpi0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nn7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gehyx")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aeog2")
}],
"loop": true,
"name": &"jump_fall",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok10a")
}],
"loop": true,
"name": &"jump_rise",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_btrci")
}],
"loop": true,
"name": &"kick",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jev2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aobfx")
}],
"loop": true,
"name": &"ladder",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf2mj")
}],
"loop": true,
"name": &"ladder_edge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wiak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jouhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n333g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibf2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2b6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esxfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5s1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3vns")
}],
"loop": true,
"name": &"walk",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc04r")
}],
"loop": true,
"name": &"whistle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nepf"]
size = Vector2(6, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akgtd"]
size = Vector2(12, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8nf7h"]
size = Vector2(112, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4tvp5"]
size = Vector2(10, 8)

[sub_resource type="Animation" id="Animation_kpv3r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -9)]
}

[sub_resource type="Animation" id="Animation_w701b"]
resource_name = "small_jump"
length = 0.15
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.08, 0.15),
"transitions": PackedFloat32Array(1, 0.267944, 1),
"update": 0,
"values": [Vector2(0, -9), Vector2(0, -12), Vector2(0, -9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ri2q"]
_data = {
"RESET": SubResource("Animation_kpv3r"),
"small_jump": SubResource("Animation_w701b")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 17
floor_snap_length = 5.0
safe_margin = 0.05
script = ExtResource("1_fgl7g")

[node name="EffectsApplierComponent" parent="." instance=ExtResource("2_yjmi5")]

[node name="HurtboxComponent" parent="." instance=ExtResource("2_e0d2b")]
collision_layer = 2
lives = 3

[node name="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_n6kf7")

[node name="HitboxComponent" parent="." instance=ExtResource("2_s3s30")]
collision_mask = 4
script = ExtResource("3_id8yp")

[node name="CollisionShape2D" parent="HitboxComponent" index="0"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_s5oim")

[node name="ThrowArrowPivot" parent="." instance=ExtResource("2_pd4ny")]
visible = false
z_index = 4096
position = Vector2(7, -7)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_qnlu6")
animation = &"idle"
offset = Vector2(-2, 0)

[node name="PickupTransform2D" type="RemoteTransform2D" parent="."]
editor_description = "Set in code for currently picked ball creature."
position = Vector2(7, -7)
update_scale = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_7nepf")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "animated_sprite")]
script = ExtResource("3_ffp80")
initial_state = NodePath("Move/Idle")
animated_sprite = NodePath("../AnimatedSprite2D")

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("character")]
script = ExtResource("5_ob3jm")
character = NodePath("../..")
abstract = true

[node name="Idle" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state", "states_for_transition")]
script = ExtResource("6_kxhls")
move_state = NodePath("..")
states_for_transition = [NodePath("../Run"), NodePath("../Air"), NodePath("../../Pickup"), NodePath("../../Climb"), NodePath("../../Whistle")]

[node name="Run" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state", "states_for_transition")]
script = ExtResource("7_xjuja")
move_state = NodePath("..")
states_for_transition = [NodePath("../Idle"), NodePath("../Air"), NodePath("../../Pickup"), NodePath("../../Climb"), NodePath("../../Whistle")]

[node name="Air" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state", "states_for_transition")]
script = ExtResource("8_j1lab")
move_state = NodePath("..")
states_for_transition = [NodePath("../Idle"), NodePath("../../Climb")]

[node name="JumpTimer" type="Timer" parent="StateMachine/Move/Air"]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="BufferTimer" type="Timer" parent="StateMachine/Move/Air"]
process_callback = 0
wait_time = 0.08
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="StateMachine/Move/Air"]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="Carry" type="Node" parent="StateMachine/Move" node_paths=PackedStringArray("move_state")]
script = ExtResource("8_be3oy")
move_state = NodePath("..")
abstract = true

[node name="ToAimTimer" type="Timer" parent="StateMachine/Move/Carry"]
wait_time = 0.2
one_shot = true

[node name="CarryIdle" type="Node" parent="StateMachine/Move/Carry" node_paths=PackedStringArray("move_state", "carry_state", "states_for_transition")]
script = ExtResource("10_8rxfi")
move_state = NodePath("../..")
carry_state = NodePath("..")
states_for_transition = [NodePath("../../../Kick"), NodePath("../CarryWalk"), NodePath("../../Air"), NodePath("../../Idle")]

[node name="CarryWalk" type="Node" parent="StateMachine/Move/Carry" node_paths=PackedStringArray("move_state", "carry_state", "states_for_transition")]
script = ExtResource("11_b3060")
move_state = NodePath("../..")
carry_state = NodePath("..")
states_for_transition = [NodePath("../CarryIdle"), NodePath("../../../Kick"), NodePath("../../Air"), NodePath("../../Idle")]

[node name="Pickup" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "states_for_transition")]
script = ExtResource("8_pln1i")
character = NodePath("../..")
states_for_transition = [NodePath("../Move/Carry/CarryIdle"), NodePath("../Move/Idle")]

[node name="Kick" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "states_for_transition")]
script = ExtResource("13_puh06")
character = NodePath("../..")
states_for_transition = [NodePath("../Move/Idle")]

[node name="Climb" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "states_for_transition")]
script = ExtResource("14_ab6lr")
character = NodePath("../..")
states_for_transition = [NodePath("../Move/Idle"), NodePath("../Move/Air")]

[node name="Whistle" type="Node" parent="StateMachine" node_paths=PackedStringArray("character", "states_for_transition")]
script = ExtResource("19_ghrr3")
character = NodePath("../..")
states_for_transition = [NodePath("../Move/Idle")]

[node name="PickupArea" type="Area2D" parent="."]
visible = false
position = Vector2(0, -11)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
position = Vector2(0, 6.5)
shape = SubResource("RectangleShape2D_akgtd")

[node name="WhistleArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="WhistleArea"]
shape = SubResource("RectangleShape2D_8nf7h")

[node name="ObjectsDetector" type="Area2D" parent="."]
visible = false
position = Vector2(0, -5)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectsDetector"]
shape = SubResource("RectangleShape2D_4tvp5")

[node name="Raycasts" type="Node2D" parent="."]

[node name="LadderDetectorLeft" type="RayCast2D" parent="Raycasts"]
position = Vector2(-4, 0)
target_position = Vector2(0, 3)
collision_mask = 16
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="LadderDetectorMiddle" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, 3)
collision_mask = 16
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="LadderDetectorRight" type="RayCast2D" parent="Raycasts"]
position = Vector2(4, 0)
target_position = Vector2(0, 3)
collision_mask = 16
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ri2q")
}

[node name="LadderStepPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("20_387y7")

[connection signal="timeout" from="StateMachine/Move/Air/JumpTimer" to="StateMachine/Move/Air" method="_on_jump_timer_timeout"]
[connection signal="timeout" from="StateMachine/Move/Air/BufferTimer" to="StateMachine/Move/Air" method="_on_buffer_timer_timeout"]
[connection signal="timeout" from="StateMachine/Move/Air/CoyoteTimer" to="StateMachine/Move/Air" method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="StateMachine/Move/Carry/ToAimTimer" to="StateMachine/Move/Carry" method="on_to_aim_timer_timeout"]
[connection signal="body_entered" from="PickupArea" to="." method="on_pickup_detector_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="on_pickup_detector_body_exited"]
[connection signal="body_entered" from="WhistleArea" to="." method="_on_whistle_area_body_entered"]
[connection signal="body_exited" from="WhistleArea" to="." method="_on_whistle_area_body_exited"]
[connection signal="area_entered" from="ObjectsDetector" to="." method="on_objects_detector_area_entered"]
[connection signal="area_exited" from="ObjectsDetector" to="." method="on_objects_detector_area_exited"]

[editable path="HurtboxComponent"]
[editable path="HitboxComponent"]
